[workspace]
members = ["packages/*", "proto-build"]
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "3.0.1", features = [ "stargate" ] }
cosmwasm-schema = { version = "3.0.0", default-features = false }
cw2 = "3.0.0"
cw-storage-plus = "3.0.0"
schemars = "0.8.4"
serde = { version = "1.0.188", default-features = false }
serde-json-wasm = "1.0.0"
base64 = "0.21.7"
prost = "0.14.1"
prost-types = "0.14.1"
bech32 = "0.9.1"
thiserror = "1.0.49"
protobuf = "~3.3.0"
hex = "0.4.3"
serde_json = { version = "1.0.87" }
speedate = "0.13.0"

cosmos-sdk-proto = { version = "0.28.0",git = "https://github.com/permissionlessweb/cosmos-rust", default-features = false }
tendermint-proto = { version = "0.40.4",git = "https://github.com/permissionlessweb/tendermint-rs", default-features = false }
